--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -917,6 +917,145 @@
       "copied_desc": "Sorted lines copied to clipboard"
     }
   },
+  "base64_encoder_page": {
+    "title": "Base64 Encoder/Decoder",
+    "subtitle": "Encode and decode Base64 strings",
+    "input_title": "Input",
+    "input_desc_encode": "Enter text to encode",
+    "input_desc_decode": "Enter Base64 to decode",
+    "switch_to_encode": "Switch to Encode",
+    "switch_to_decode": "Switch to Decode",
+    "placeholders": {
+      "encode": "Enter text to encode...",
+      "decode": "Enter Base64 to decode...",
+      "output": "Result will appear here..."
+    },
+    "buttons": {
+      "encode": "Encode",
+      "decode": "Decode",
+      "copy": "Copy Result"
+    },
+    "output_title": "Output",
+    "output_desc_encode": "Encoded result",
+    "output_desc_decode": "Decoded result",
+    "toasts": {
+      "error_title": "Error",
+      "error_desc": "Invalid input for decoding",
+      "copied_title": "Copied!",
+      "copied_desc": "Result copied to clipboard"
+    }
+  },
+  "random_number_generator_page": {
+    "title": "Random Number Generator",
+    "subtitle": "Generate random numbers within a range",
+    "back": "Back to Generators",
+    "settings_title": "Settings",
+    "settings_desc": "Set parameters for generating numbers",
+    "min_label": "Minimum",
+    "max_label": "Maximum",
+    "count_label": "Number of Values",
+    "allow_duplicates": "Allow duplicates",
+    "generate_button": "Generate Numbers",
+    "results_title": "Results",
+    "results_desc": "Generated random numbers",
+    "copy": "Copy",
+    "regenerate": "Generate Again",
+    "empty_prompt": "Click \"Generate Numbers\" to start",
+    "toasts": {
+      "range_error": "Minimum value must be less than maximum",
+      "duplicate_error": "Cannot generate that many unique numbers in the range",
+      "generated": "Random numbers generated successfully!",
+      "copied": "Numbers copied to clipboard!"
+    }
+  },
+  "url_encoder_page": {
+    "title": "URL Encoder/Decoder",
+    "subtitle": "Encode and decode URL strings",
+    "input_title": "Input",
+    "input_desc_encode": "Enter URL to encode",
+    "input_desc_decode": "Enter encoded URL to decode",
+    "switch_to_encode": "Switch to Encode",
+    "switch_to_decode": "Switch to Decode",
+    "placeholders": {
+      "encode": "Enter URL to encode...",
+      "decode": "Enter encoded URL to decode...",
+      "output": "Result will appear here..."
+    },
+    "buttons": {
+      "encode": "Encode URL",
+      "decode": "Decode URL",
+      "copy": "Copy Result"
+    },
+    "output_title": "Output",
+    "output_desc_encode": "Encoded URL",
+    "output_desc_decode": "Decoded URL",
+    "toasts": {
+      "error_title": "Error",
+      "error_desc": "Invalid URL format",
+      "copied_title": "Copied!",
+      "copied_desc": "Result copied to clipboard"
+    }
+  },
+  "password_generator_page": {
+    "title": "Password Generator",
+    "subtitle": "Generate secure passwords with custom options",
+    "generate_title": "Generate Password",
+    "generate_desc": "Customize your password settings and generate a secure password",
+    "length_label": "Password Length: {{length}}",
+    "uppercase": "Uppercase (A-Z)",
+    "lowercase": "Lowercase (a-z)",
+    "numbers": "Numbers (0-9)",
+    "symbols": "Symbols (!@#$...)",
+    "generate_button": "Generate Password",
+    "result_label": "Generated Password",
+    "toasts": {
+      "error_title": "Error",
+      "charset_error": "Please select at least one character type",
+      "copied_title": "Copied!",
+      "copied_desc": "Password copied to clipboard"
+    }
+  },
+  "case_converter_page": {
+    "title": "Case Converter",
+    "subtitle": "Convert text to different cases and formats",
+    "input_title": "Input Text",
+    "input_desc": "Enter text to convert to different cases",
+    "placeholder": "Enter your text here...",
+    "convert_button": "Convert Cases",
+    "output_title": "Converted Text",
+    "output_desc": "Text in different case formats",
+    "result_placeholder": "Result will appear here...",
+    "toasts": {
+      "copied_title": "Copied!",
+      "copied_desc": "{{type}} text copied to clipboard"
+    }
+  },
+  "char_frequency_page": {
+    "back": "Back to Text Tools",
+    "title": "Character Frequency",
+    "subtitle": "Analyze character frequency in your text",
+    "input_title": "Input Text",
+    "input_desc": "Enter text to analyze character frequency",
+    "placeholder": "Enter your text here...",
+    "analyze_button": "Analyze Frequency",
+    "result_title": "Character Frequency",
+    "result_desc": "Character count and percentage",
+    "results_empty": "Character frequency will appear here..."
+  },
+  "color_picker_page": {
+    "title": "Color Picker",
+    "subtitle": "Pick colors and get values in different formats",
+    "selector_title": "Color Selector",
+    "selector_desc": "Choose your color using the picker or enter a hex value",
+    "picker_label": "Color Picker",
+    "hex_label": "Hex Value",
+    "values_title": "Color Values",
+    "values_desc": "Copy color values in different formats",
+    "toasts": {
+      "copied_title": "Copied!",
+      "copied_desc": "{{value}} copied to clipboard"
+    }
+  },
   "footer": {
     "categories": "Categories",
     "popular": "Popular",
